project section done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <hr>
   <main>
 
-    <div class="home">
+    <div class="home" id="home">
       <div class="introduction">
         <h1 class="intro_heading">
           HELLO!
@@ -59,7 +59,85 @@
       </div>
     </div>
 
-    <div class="about section">
+    <div class="project section" id="project">
+      <h1 class="project_heading section_name">
+        < projects />
+      </h1>
+      <div class="project_list">
+
+        <div class="project_item">
+          <h1 class="project_title">
+            ARchiTECH
+          </h1>
+          <div class="project_description">
+            <div class="project_content">
+              <p class="project_info">The application is capable of creating a 3D model of a given 2D plan.
+                It first
+                scans the given plan and then builds a corresponding 3D model by replacing the lines forming the rooms
+                with actual walls.This process requires a 3D game engine to build the application; which in this case
+                is Unity.</p>
+              <p class="technology">
+                Python-OpenCv-AugmentedReality-Unity
+              </p>
+              <a href="https://github.com/AbhijitTurate/AR-chi-Tech" class="link_button" target="_blank"><i
+                  class="fa-solid fa-link"></i>VISIT ME</a>
+            </div>
+            <div class="project_image">
+              <img class="project_img" src="./assets/projects/ArkeyTech.jpg" alt="project ARCHITECH">
+            </div>
+          </div>
+        </div>
+
+        <div class="project_item">
+          <h1 class="project_title">
+            FACE MASK DETECTION
+          </h1>
+          <div class="project_description">
+            <div class="project_content">
+              <p class="project_info">
+                Python: Real-time face mask Detection with Colab (GPU), Yolov3 and OpenCV
+                Face Mask Detection system built with OpenCV, YOLOv3 using Computer Vision concepts in order to detect
+                face masks in static images as well as videos.
+                This system can therefore be used in real-time applications which require face-mask detection for safety
+                purposes due to the outbreak of Covid-19.
+              </p>
+              <p class="technology">
+                Python-OpenCv-YOLO-Colab
+              </p>
+              <a href="https://github.com/AbhijitTurate/fask-mask-detection" class="link_button" target="_blank"><i class="fa-solid fa-link"></i>VISIT ME</a>
+            </div>
+            <div class="project_image">
+              <img class="project_img" src="./assets/projects/face_mask_detection.png" alt="project ARCHITECH">
+            </div>
+          </div>
+        </div>
+
+        <div class="project_item">
+          <h1 class="project_title">
+            Evaluation of Housing Prices in California
+          </h1>
+          <div class="project_description">
+            <div class="project_content">
+              <p class="project_info">
+                In this project, I examine the housing prices in California to figure out what factors influence the
+                prices the most.The intelligence will be relative for the companies to determine the income of the
+                household, which can be utilized to incorporate the targeted ads.
+              </p>
+              <p class="technology">
+                Python-MachineLearning-DataAnalysis-Pandas
+              </p>
+              <a href="https://github.com/AbhijitTurate/Evaluation-of-Housing-Prices-in-California" class="link_button"
+                target="_blank"><i class="fa-solid fa-link"></i>VISIT ME</a>
+            </div>
+            <div class="project_image">
+              <img class="project_img" src="./assets/projects/california.png" alt="project ARCHITECH">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="about section" id="about">
       <!-- <div class="about_picture">
         <img src="./assets/hacker.png" alt="">
       </div> -->
@@ -80,34 +158,7 @@
         </p>
       </div>
     </div>
-    <div class="project section">
-      <h1 class="project_heading section_name">
-        < projects />
-      </h1>
-      <div class="project_list">
-        <div class="project_item">
-          <h1 class="project_title">
-            ARchiTECH
-          </h1>
-          <div class="project_description">
-            <div class="project_content">
-              <p class="project_info">The application is capable of creating a 3D model of a given 2D plan. <br>
-                It first
-                scans the given plan and then builds a corresponding 3D model by replacing the lines forming the rooms
-                with actual walls. <br> This process requires a 3D game engine to build the application; which in this case
-                is Unity.</p>
-              <p class="technology">
-                Python-OpenCv-AugmentedReality-Unity
-              </p>
-              <a href="" class="link_button"><i class="fa-solid fa-link"></i>VISIT ME</a>
-            </div>
-            <div class="project_image">
-              <img class="project_img" src="./assets/programmer2.svg" alt="project ARCHITECH">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <div class="contact section">
       <h1 class="contact_heading">
         FIND ME ON
