--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
       </div>
       <div class="navLinkContainer">
         <ul class="navLinks">
-          <li class="navItem"><a href="" class="navLink"> Home </a></li>
-          <li class="navItem"><a href="" class="navLink"> Projects</a></li>
-          <li class="navItem"><a href="" class="navLink"> About </a></li>
-          <li class="navItem"><a href="" class="navLink"> Qualifications</a></li>
+          <li class="navItem"><a href="#home" class="navLink"> Home </a></li>
+          <li class="navItem"><a href="#project" class="navLink"> Projects</a></li>
+          <li class="navItem"><a href="#about" class="navLink"> About </a></li>
           <li class="navItem">
-            <a href="" class="navLink cta"> Contact </a>
+            <a href="#contact" class="navLink cta"> Contact </a>
           </li>
         </ul>
       </div>
       <div class="hamburger">
-
+          <span class="bar"> </span>
+          <span class="bar"> </span>
+          <span class="bar"> </span>
       </div>
     </nav>
   </header>
@@ -46,7 +47,9 @@
           HELLO!
           <img src="./assets/handeave.png" alt="handwave" class="handwave--image">
           <br>
-          I'm <span class="name">Abhijit Turate</span>
+          I'm <span class="name"> 
+            <br class="hide addBreak"> 
+            Abhijit Turate</span>
 
         </h1>
 
@@ -55,7 +58,7 @@
         </h3>
       </div>
       <div class="profile_picture">
-        <img src="./assets/profile.svg" alt="Profile Picture">
+        <img src="./assets/programmer2.svg" alt="Profile Picture">
       </div>
     </div>
 
@@ -159,7 +162,7 @@
       </div>
     </div>
 
-    <div class="contact section">
+    <div class="contact section" id="contact">
       <h1 class="contact_heading">
         FIND ME ON
       </h1>
