done with responsiveness. Links added

--- a/index.html
+++ b/index.html
@@ -172,17 +172,10 @@
       <!-- Find my social media handles in the footer below!</h2> -->
       <div class="social_media">
         <ul class="socialmedia_icons">
-          <!-- <li class="socialmedia_icon">
-            <a href=""><img src="./assets/SocialIcons/github.svg" alt="" class="iconimage"></a>
-          </li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/instagram.svg" alt="" class="iconimage"></a></li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/icons8-linkedin-50.png" alt="" class="iconimage"></a></li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/twitter.png" alt="" class="iconimage"></a></li> -->
-
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-github"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-twitter-square"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-instagram-square"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://github.com/AbhijitTurate" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://twitter.com/abhijit_turate" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://www.instagram.com/abhi_879/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://www.linkedin.com/in/abhijit-turate/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
@@ -197,16 +190,10 @@
 
       <div class="social_media">
         <ul class="socialmedia_icons">
-          <!-- <li class="socialmedia_icon">
-            <a href=""><img src="./assets/SocialIcons/github.svg" alt="" class="iconimage"></a>
-          </li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/instagram.svg" alt="" class="iconimage"></a></li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/icons8-linkedin-50.png" alt="" class="iconimage"></a></li>
-          <li class="socialmedia_icon"><a href=""><img src="./assets/SocialIcons/twitter.png" alt="" class="iconimage"></a></li> -->
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-github"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-twitter-square"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-instagram-square"></i></a></li>
-          <li class="socialmedia_icon"><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://github.com/AbhijitTurate" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://twitter.com/abhijit_turate" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://www.instagram.com/abhi_879/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a></li>
+          <li class="socialmedia_icon"><a href="https://www.linkedin.com/in/abhijit-turate/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
