--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/dist/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -145,20 +145,29 @@
         <img src="./assets/hacker.png" alt="">
       </div> -->
       <div>
-        <h1 class="about_heading heading">ABOUT ME</h1>
-        <p class="about_content subheading">
-          Hello! I'm Abhijit Turate, a Software Engineer from Virar, India.
-          <br>
-          <br>
-          I am focused person who always works hard to achieve goals demonstrates a strong work ethic and creative
-          ability and has never failed to meet an assignment deadline.
-          I seek to apply my programming/developing skills and creative mindset to create something that could be a part
-          of a much more excellent idea and be helpful for all.
-          <br>
-          <br>
-          When I'm not coding, I play outdoor games with my friends , watch some shows on amazon Prime or Netflix and if
-          the weather's good, explore some hidden places.
-        </p>
+        <h1 class="about_heading ">ABOUT ME</h1>
+        <div class="about_content">
+          <div class="content_wrapper">
+            <p class="content">
+              Hello! I'm Abhijit Turate, a Software Engineer from Virar, India.
+            </p>
+          </div>
+          <div class="content_wrapper">
+            <p class="content">
+              I am focused person who always works hard to achieve goals demonstrates a strong work ethic and creative
+              ability and has never failed to meet an assignment deadline.
+              I seek to apply my programming/developing skills and creative mindset to create something that could be a part
+              of a much more excellent idea and be helpful for all.  
+            </p>
+           
+          </div>
+          <div class="content_wrapper">
+            <p class="content">
+              When I'm not coding, I play outdoor games with my friends , watch some shows on amazon Prime or Netflix and if
+              the weather's good, explore some hidden places.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
