--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           </h1>
         </div>
         <div class="hamburger">
-          <div class="bar"> </div>
-          <div class="bar"> </div>
-          <div class="bar"> </div>
+          <div class="bar bar1"> </div>
+          <div class="bar bar2"> </div>
+          <div class="bar bar3"> </div>
       </div>
       </div>
     
