--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       </div>
     </div>
   </footer>
-  <script src="./app.js"></script>
+  <script src="./src/app.js" type="module"></script>
 </body>
 
 </html>
