project section modeling and rendering is done

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="project_list">
 
         <div class="project_item">
-          <h1 class="project_title">
-            ARchiTECH
+          <h1 class="project_title">           
+             ARchiTECH
           </h1>
           <div class="project_description">
             <div class="project_content">
@@ -96,7 +96,7 @@
           </div>
         </div>
 
-        <div class="project_item">
+        <!-- <div class="project_item">
           <h1 class="project_title">
             FACE MASK DETECTION
           </h1>
@@ -135,13 +135,13 @@
                 Python-MachineLearning-DataAnalysis-Pandas
               </p>
               <a href="https://github.com/AbhijitTurate/Evaluation-of-Housing-Prices-in-California" class="link_button"
-                target="_blank"><i class="fa-solid fa-link"></i>VISIT ME</a>
+                target="_blank"><i class="fa-solid fa-link"></i> <span> VISIT ME</span></a>
             </div>
             <div class="project_image">
               <img class="project_img" src="./assets/projects/california.png" alt="project ARCHITECH">
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
