JS structure updated

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </h1>
       <div class="project_list">
 
-        <div class="project_item">
+        <!-- <div class="project_item">
           <h1 class="project_title">           
              ARchiTECH
           </h1>
@@ -94,7 +94,7 @@
               <img class="project_img" src="./assets/projects/ArkeyTech.jpg" alt="project ARCHITECH">
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="project_item">
           <h1 class="project_title">
