--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="./src/app.js" type="module"></script>
 </head>
 
 <body>
@@ -212,7 +213,8 @@
       </div>
     </div>
   </footer>
-  <script src="./src/app.js" type="module"></script>
+  <script src="./utils/hamBurger.js" ></script>
+ 
 </body>
 
 </html>
