--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./src/app.js" type="module" defer></script>
+    <link rel="preload" href="./assets/backgroundImage.webp" as="image" />
+    <link rel="stylesheet" href="./styles/dist/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    
+    <script src="./src/app.js" type="module"></script>
   </head>
   <body>
     <div id="root"></div>
