project section done . Required refractoring

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       </div>
     </div>
 
-    <div class="project section" id="project">
+
+    <div class="root"></div>
+    <!-- <div class="project section" id="project">
       <h1 class="project_heading section_name">
         < projects />
       </h1>
@@ -144,7 +146,7 @@
           </div>
         </div> -->
       </div>
-    </div>
+    </div> -->
 
     <div class="about section" id="about">
       <!-- <div class="about_picture">
